--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "react-particles-js": "^3.3.0",
     "react-scripts": "3.4.3",
     "react-tilt": "^0.1.4",
-    "serve": "^12.0.0",
     "tachyons": "^4.12.0"
   },
   "scripts": {
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
